--- a/plugin.ini
+++ b/plugin.ini
@@ -2,11 +2,9 @@
 name = "Wikipedia Citations"
 author = "Daniele Binaghi"
 description = "Filters citation format"
-version = "1.0"
+version = "1.1"
 license = "GPLv3"
-link = ""
-support_link = ""
+link = "https://github.com/DBinaghi/plugin-WikipediaCitations"
+support_link = "https://github.com/DBinaghi/plugin-WikipediaCitations/issues"
 omeka_minimum_version = "2.0"
 omeka_target_version = "2.4"
-required_plugins = ""
-optional_plugins = "citations"
