--- a/plugin.ini
+++ b/plugin.ini
@@ -1,7 +1,7 @@
 [info]
 name = "Wikipedia Citations"
 author = "Daniele Binaghi"
-description = "Filters citation format"
+description = "Formats citations according to Wikipedia guidelines"
 version = "1.1"
 license = "GPLv3"
 link = "https://github.com/DBinaghi/plugin-WikipediaCitations"
